Added translation of application and German de_DE translation. Added some missing Android icons to git.

--- a/aboutform.ui
+++ b/aboutform.ui
@@ -11,10 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Form</string>
-  </property>
-  <property name="locale">
-   <locale language="English" country="UnitedStates"/>
+   <string>About...</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="0">
