--- a/res.qrc
+++ b/res.qrc
@@ -5,5 +5,6 @@
         <file>res/filepile_72.png</file>
         <file>res/filepile_256.png</file>
         <file>res/filepile_512.png</file>
+        <file>translations/FilePile_de_DE.qm</file>
     </qresource>
 </RCC>
