Global constants put into a separate file. Adding logic to implement SQLite DB creation.

--- a/res.qrc
+++ b/res.qrc
@@ -6,5 +6,6 @@
         <file>res/filepile_256.png</file>
         <file>res/filepile_512.png</file>
         <file>translations/FilePile_de_DE.qm</file>
+        <file>sql/dbversion.ini</file>
     </qresource>
 </RCC>
